# Silver

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  WORKFLOW.md  operator-definition.md  pyproject.toml
config/: agentic_build.yaml  available_at_policies.yaml  feature_candidates.yaml  seed_reference_data.yaml  trading_calendar.yaml
docs/: AGENTIC_BUILD_SYSTEM_CORE.md  AI_NATIVE_SILVER.md  ARCHITECTURE.md  EARNINGS_RELEASE_EVENTS_V0.md  FUNDAMENTALS_V0.md  OBJECTIVE_CONTROLLER_SCHEMATIC.md  PHASE1_RUNBOOK.md  PIT_DISCIPLINE.md  PROMISING_CANDIDATE_REVIEW_V0.md  PROMISING_DEEP_DIVE_V0.md  SECURITY.md  SYMPHONY.md  Symphony-Operation.md  TESTING.md  index.md
scripts/: admission_steward.py  apply_migrations.py  check_phase1_environment.py  explain_hypothesis_evaluation.py  ingest_fmp_prices.py  ingest_sec_companyfacts.py  ingest_sec_earnings_releases.py  integration_repair_runner.py  integration_steward.py  linear_mirror.py  manage_hypotheses.py  materialize_feature_candidates.py  materialize_forward_labels.py  materialize_momentum_12_1.py  merge_steward.py  objective_run.py  planning_steward.py  research_results_report.py  run_falsifier.py  run_feature_candidate_horizon_sweep.py  run_feature_candidate_walk_forward.py  seed_available_at_policies.py  seed_reference_data.py  seed_trading_calendar.py  vcs_reconciler.py  work_ledger.py
silver/: __init__.py
tests/: test_admission_steward.py  test_available_at_policies.py  test_backtest_metadata_repository.py  test_check_phase1_environment.py  test_dollar_volume.py  test_earnings_release_events.py  test_import.py  (+39 more)
(+73 files in other folders)
