[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "silver"
version = "0.1.0"
description = "Point-in-time prediction and backtesting system for US equities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pandas-market-calendars>=5.0,<6", "PyYAML>=6.0"]

[dependency-groups]
dev = [
    "pytest==8.1.1",
    "ruff==0.14.13",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]
